# BlueOS

./: .gitignore  .gitmodules
.github/workflows/: test-and-deploy.yml
bootstrap/: bag-of-holding  startup.json.default
bootstrap/bootstrap/: bootstrap.py
core/: Dockerfile  start-blueos-core
core/libs/commonwealth/commonwealth/utils/: commands.py  logs.py
core/libs/commonwealth/src/commonwealth/utils/: logs.py
core/services/: install-services.sh
core/services/ardupilot_manager/flight_controller_detector/linux/: detector.py  linux_boards.py  navigator.py
core/services/cable_guy/: main.py
core/services/kraken/: kraken.py
core/services/vescConfigEditor/: main.py  pyproject.toml  setup.py  vescConfigEditor.py
core/tools/blueos_startup_update/: blueos_startup_update.py
core/tools/mavlink_router/: bootstrap.sh
core/tools/nginx/: nginx.conf
install/: install.sh
install/boards/: bcm_27xx.sh
install/kraken/: set_default_extensions.sh
install/overlays/: adin1110.dtbo  single-pair.dts
