[project]
name = "vescConfigEditor"
version = "0.1.0"
description = "Manager for vesc config updates."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anyio==3.7.1",
    "commonwealth==0.1.0",
    "fastapi==0.105.0",
    "fastapi-versioning==0.9.1",
    "loguru==0.5.3",
    "uvicorn==0.13.4",
]

[tool.uv.sources]
commonwealth = { workspace = true }
